--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/5d8c4752cc.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <a href="https://wa.me/5492262655087?text=Me%20gustaría%20saber%20mas%20sobre%20Los%20Olivillos" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
+    <a href="https://wa.me/5492262655087?text=Me%20gustaría%20saber%20más%20sobre%20Los%20Olivillos" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
     
    </head>
   <body>
